feat: Update shell to Smithay 0.7, fix daemon compilation, and add Windows support to roadmap

--- a/iso/pacman.conf
+++ b/iso/pacman.conf
@@ -21,7 +21,7 @@ Include = /etc/pacman.d/mirrorlist
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 
-# KOOMPI custom repository (uncomment when available)
-# [koompi]
-# SigLevel = Optional TrustAll
-# Server = file:///home/build/packages/repo
+# KOOMPI custom repository
+[koompi]
+SigLevel = Optional TrustAll
+Server = file:///home/user0/projects/koompi-os/packages/repo
