--- a/rust/koompi-mesh/Cargo.toml
+++ b/rust/koompi-mesh/Cargo.toml
@@ -12,3 +12,4 @@ anyhow.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tracing.workspace = true
+chrono = { version = "0.4", features = ["serde"] }
