--- a/rust/koompi-shell/Cargo.toml
+++ b/rust/koompi-shell/Cargo.toml
@@ -8,4 +8,5 @@ smithay = { workspace = true }
 iced = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 anyhow = { workspace = true }
