Phase 5 complete: Add Settings app, File manager, and Login screen
- Add koompi-settings: Iced-based settings app with Display, Appearance, Sound, Network, About pages
- Add koompi-files: File manager with sidebar, list/grid views, directory navigation
- Add greetd + tuigreet login screen configuration
- Add notifications, lock screen (Super+L), power menu (Ctrl+Alt+Del)
- Reorganize Rust workspace structure (rename crates for clarity)
- Update ISO packages with greetd dependencies

Shell keybindings: Super (launcher), Super+L (lock), Super+T (terminal),
Super+E (file manager), Super+Q (close), PrtSc (screenshot), Ctrl+Alt+Del (power menu)

--- a/python/koompi-chat/pyproject.toml
+++ b/python/koompi-chat/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "koompi-ai"
+name = "koompi-chat"
 version = "0.1.0"
-description = "AI integration for KOOMPI OS"
+description = "AI Chat Assistant for KOOMPI OS"
 readme = "README.md"
 license = "MIT"
 requires-python = ">=3.12"
@@ -13,24 +13,18 @@ authors = [
     { name = "KOOMPI Team", email = "dev@koompi.org" }
 ]
 dependencies = [
-    "google-generativeai>=0.3.0",
-    "openai-whisper>=20231117",
-    "numpy>=1.26.0",
-    "sounddevice>=0.4.6",
+    "PySide6>=6.6.0",
+    "koompi-ai",
+    "qt-material>=2.14",
+    "qasync>=0.27.1",
 ]
+
+[project.scripts]
+koompi-chat = "koompi_chat.main:main"
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.4.0",
-    "pytest-asyncio>=0.21.0",
     "ruff>=0.1.0",
     "mypy>=1.7.0",
 ]
-
-[tool.ruff]
-line-length = 88
-target-version = "py312"
-
-[tool.mypy]
-python_version = "3.12"
-strict = true
