Rename apps for universal use: koompi-settings → system-settings, koompi-files → filemanager

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,8 +7,8 @@ members = [
     "packages",
     "mesh",
     "ffi",
-    "koompi-files",
-    "koompi-settings",
+    "filemanager",
+    "system-settings",
 ]
 
 [workspace.package]
