--- a/iso/grub/grub.cfg
+++ b/iso/grub/grub.cfg
@@ -44,16 +44,16 @@ timeout_style=menu
 
 # Menu entries
 
-menuentry "KOOMPI OS Base (%ARCH%, ${archiso_platform})" --class koompi --class arch --class gnu-linux --class gnu --class os --id 'koompi' {
+menuentry "KOOMPI OS (%ARCH%, ${archiso_platform})" --class koompi --class arch --class gnu-linux --class gnu --class os --id 'koompi' {
     set gfxpayload=keep
-    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID%
-    initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
+    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux-lts archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID%
+    initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux-lts.img
 }
 
-menuentry "KOOMPI OS Base with accessibility (%ARCH%, ${archiso_platform})" --hotkey s --class koompi --class arch --class gnu-linux --class gnu --class os --id 'koompi-accessibility' {
+menuentry "KOOMPI OS with accessibility (%ARCH%, ${archiso_platform})" --hotkey s --class koompi --class arch --class gnu-linux --class gnu --class os --id 'koompi-accessibility' {
     set gfxpayload=keep
-    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% accessibility=on
-    initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
+    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux-lts archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% accessibility=on
+    initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux-lts.img
 }
 
 
