--- a/iso/syslinux/archiso_sys-linux.cfg
+++ b/iso/syslinux/archiso_sys-linux.cfg
@@ -1,20 +1,20 @@
 LABEL koompi
 TEXT HELP
-Boot KOOMPI OS Base Edition on BIOS.
+Boot KOOMPI OS on BIOS.
 Install KOOMPI OS to disk or perform system maintenance.
 ENDTEXT
-MENU LABEL KOOMPI OS Base (%ARCH%, BIOS)
-LINUX /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux
-INITRD /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
+MENU LABEL KOOMPI OS (%ARCH%, BIOS)
+LINUX /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux-lts
+INITRD /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux-lts.img
 APPEND archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID%
 
 # Accessibility boot option
 LABEL koompiaccessibility
 TEXT HELP
-Boot KOOMPI OS Base Edition on BIOS with screen reader.
+Boot KOOMPI OS on BIOS with screen reader.
 Install KOOMPI OS to disk with speech feedback enabled.
 ENDTEXT
-MENU LABEL KOOMPI OS Base (%ARCH%, BIOS) with ^speech
-LINUX /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux
-INITRD /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
+MENU LABEL KOOMPI OS (%ARCH%, BIOS) with ^speech
+LINUX /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux-lts
+INITRD /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux-lts.img
 APPEND archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% accessibility=on
