feat: integrated security packages and kernel parameters for apparmor support

--- a/iso/grub/grub.cfg
+++ b/iso/grub/grub.cfg
@@ -46,13 +46,13 @@ timeout_style=menu
 
 menuentry "KOOMPI OS (%ARCH%, ${archiso_platform})" --class koompi --class arch --class gnu-linux --class gnu --class os --id 'koompi' {
     set gfxpayload=keep
-    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux-lts archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID%
+    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux-lts archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% apparmor=1 security=apparmor
     initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux-lts.img
 }
 
 menuentry "KOOMPI OS with accessibility (%ARCH%, ${archiso_platform})" --hotkey s --class koompi --class arch --class gnu-linux --class gnu --class os --id 'koompi-accessibility' {
     set gfxpayload=keep
-    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux-lts archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% accessibility=on
+    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux-lts archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% accessibility=on apparmor=1 security=apparmor
     initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux-lts.img
 }
 
