--- a/iso/syslinux/archiso_sys-linux.cfg
+++ b/iso/syslinux/archiso_sys-linux.cfg
@@ -6,7 +6,7 @@ ENDTEXT
 MENU LABEL KOOMPI OS (%ARCH%, BIOS)
 LINUX /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux-lts
 INITRD /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux-lts.img
-APPEND archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID%
+APPEND archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% apparmor=1 security=apparmor
 
 # Accessibility boot option
 LABEL koompiaccessibility
@@ -17,4 +17,4 @@ ENDTEXT
 MENU LABEL KOOMPI OS (%ARCH%, BIOS) with ^speech
 LINUX /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux-lts
 INITRD /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux-lts.img
-APPEND archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% accessibility=on
+APPEND archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% accessibility=on apparmor=1 security=apparmor
