fix: align Welcome to KOOMPI OS box borders

--- a/iso/airootfs/etc/fastfetch/config.jsonc
+++ b/iso/airootfs/etc/fastfetch/config.jsonc
@@ -10,7 +10,15 @@
     "modules": [
         {
             "type": "custom",
-            "format": "Welcome to KOOMPI OS"
+            "format": "┌────────────────────────────────┐"
+        },
+        {
+            "type": "custom",
+            "format": "│    Welcome to KOOMPI OS        │"
+        },
+        {
+            "type": "custom",
+            "format": "└────────────────────────────────┘"
         },
         "break",
         {
