feat: complete KOOMPI KDE branding with Calamares, desktop customizations, and SDDM theme
Phase 1 - Calamares Installer:
- Added Calamares graphical installer with KOOMPI branding
- Created slideshow with 5 feature slides
- Configured for Btrfs, SDDM, and KOOMPI services
- Added 'Install KOOMPI OS' desktop shortcut

Phase 2 - Desktop Branding:
- Panel moved to top with height 36px
- KOOMPI menu icon (light/dark variants)
- KOOMPI wallpaper as default
- ChromeOS window decoration
- Konsole toolbars hidden for clean look
- New hexagonal KOOMPI ASCII logo for fastfetch

Phase 3 - SDDM Theme:
- Custom KOOMPI login theme with logo
- Styled login form with KOOMPI colors
- KOOMPI wallpaper background

Additional:
- Added Firefox browser
- Added kwin-decoration-chromeos

--- a/iso/airootfs/etc/fastfetch/config.jsonc
+++ b/iso/airootfs/etc/fastfetch/config.jsonc
@@ -28,7 +28,8 @@
         "break",
         {
             "type": "os",
-            "key": "OS"
+            "key": "OS",
+            "format": "KOOMPI OS KDE Edition x86_64"
         },
         {
             "type": "kernel",
@@ -45,6 +46,10 @@
         {
             "type": "shell",
             "key": "Shell"
+        },
+        {
+            "type": "de",
+            "key": "Desktop"
         },
         {
             "type": "terminal",
